# FCLS

./: LICENSE
fcsl/: pyproject.toml  requirements.txt
fcsl/examples/coastal_monitoring/ontology/: coastal_monitoring.yaml
fcsl/ontology/: fcsl_core_schema.yaml
fcsl/src/fcsl/: __init__.py
fcsl/src/fcsl/core/: __init__.py  primitives.py  relations.py  statements.py
fcsl/src/fcsl/evaluation/: __init__.py  baselines.py  ments.py  metrics.py
fcsl/src/fcsl/ontology/: __init__.py  domain_ontology.py  validators.py
fcsl/src/fcsl/operators/: __init__.py  activate.py  common.py  construct_knowledge.py  contextualize.py  ground_action.py  require.py  select.py  update_belief.py
fcsl/src/fcsl/reasoning/: __init__.py  closure.py  conflict_resolution.py  rule_engine.py
fcsl/src/fcsl/relevance/: __init__.py  agent_relevance.py  context_compatibility.py  relevance_model.py  semantic_affinity.py  source_reliability.py  temporal_relevance.py
fcsl/src/fcsl/scenarios/coastal_monitoring/: __init__.py  generator.py  pipeline.py
fcsl/src/fcsl/semantics/: __init__.py  confidence.py  conflict_detection.py  interpretation.py  temporal_validity.py
fcsl/src/fcsl/state/: __init__.py  cognitive_state.py
